syntax = "proto3";

package UserPackage;

import "google/protobuf/wrappers.proto";
import "common.proto";

service UserAuthService {
  rpc GenerateJwts (User) returns (JwtTokens);
  rpc GenerateJwtsFromRefreshToken (RefreshTokenRequest) returns (JwtTokens);
  rpc FindOrCreateOauthUser (User) returns (User);
  rpc DeleteOAuthUser (common.ID) returns (User);
  rpc GenerateWebsocketTicket (CreateWebsocketTicketInfoRequest) returns (WebsocketTicket);
  rpc ConsumeWebsocketTicket (common.ID) returns (WebsocketTicket);
  rpc ValidateUsersExists (common.IDs) returns (google.protobuf.BoolValue);
}

message User {
    string id = 1;
    string authProvider = 2;
    string authProviderId = 3;
    string email = 4;
    string oauthName = 5;
    UserProfile userProfile = 6;
}

message UserProfile {
    string name = 1;
    int32 preferredLanguageId = 2;
    int32 roleId = 3;
}

message RefreshTokenRequest {
    string refreshToken = 1;
}

message CreateWebsocketTicketInfoRequest {
    string userId = 1;
}

message WebsocketTicket {
    string id = 1;
    string expiry = 2;
    bool isUsed = 3;
}

message JwtTokens {
    string accessToken = 1;
    string refreshToken = 2;
}
